fromenv/tests/ui/04-optional-field-with-default.stderr
error: Optional fields cannot have a default
 --> tests/ui/04-optional-field-with-default.rs:5:17
  |
5 |     #[env(from, default = "FOO")]
  |                 ^^^^^^^
